--- a/INTRO.html
+++ b/INTRO.html
@@ -12,8 +12,16 @@
   <h1>My First Web Page</h1>
   <p>My First Paragraph</p>
 
+
+
+  
+
   <button onclick="document.write(14 + 2)">display the answer</button>
   <p id="demo"></p>
+
+  <script>
+    window.alert(10 + 10);
+  </script>
   <script>
     document.getElementById('demo').innerHTML = 2 + 6;
     document.write(4+2);
