--- a/INTRO.html
+++ b/INTRO.html
@@ -19,12 +19,20 @@
   <button onclick="document.write(14 + 2)">display the answer</button>
   <p id="demo"></p>
 
-  <script>
-    window.alert(10 + 10);
+ <!-- Your HTML content goes here -->
+
+<input type="submit" onclick="fun()">
+
+<script>
+  function fun() {
+    alert('Hi client, please login first on this page');
+  }
+</script>
   </script>
   <script>
-    document.getElementById('demo').innerHTML = 2 + 6;
-    document.write(4+2);
+   document.getElementById('demo').innerHTML = 2 + 6;
+     document.write(4+2);
+    window.alert(5 + 6);
   </script>
 </body>
 
