Using console.log()

--- a/INTRO.html
+++ b/INTRO.html
@@ -33,6 +33,10 @@
    document.getElementById('demo').innerHTML = 2 + 6;
      document.write(4+2);
     window.alert(5 + 6);
+    
+
+    //console.log()
+    console.log(5 + 3);
   </script>
 </body>
 
