--- a/INTRO.html
+++ b/INTRO.html
@@ -35,8 +35,15 @@
     window.alert(5 + 6);
     
 
-    //console.log()
+    //1 Example of console.log()
     console.log(5 + 3);
+
+
+    // 2 Examles of console.log()
+    let message = "hellow world";
+    console.log() ;
+
+
   </script>
 </body>
 
