--- a/INTRO.html
+++ b/INTRO.html
@@ -18,7 +18,7 @@
   
 
   <button onclick="document.write(14 + 2)">display the answer</button>
-  <p id="demo"></p>
+  <p id="demo" style="background-color: green; color: greenyellow; width: 500px; height: auto;"></p>
 
  <!-- Your HTML content goes here -->
 
