--- a/INTRO.html
+++ b/INTRO.html
@@ -12,13 +12,14 @@
 <body>
   <h1>My First Web Page</h1>
   <p>My First Paragraph</p>
-
-
-
-  
+ 
 
   <button onclick="document.write(14 + 2)">display the answer</button>
   <p id="demo" style="background-color: green; color: greenyellow; width: 500px; height: auto;"></p>
+
+
+  <!--// JavaScript Print-->
+  <button onclick="window.print('hellow print')">print this pageg</button>
 
  <!-- Your HTML content goes here -->
 
