Using document.write() and some file modified

--- a/INTRO.html
+++ b/INTRO.html
@@ -18,24 +18,33 @@
   <p id="demo" style="background-color: green; color: greenyellow; width: 500px; height: auto;"></p>
 
 
-  <!--// JavaScript Print-->
+  <!--!:-Javacript Print-->
   <button onclick="window.print('hellow print')">print this pageg</button>
+
+
+<!--!Using document.write()-->
+  <h1>My First Web Page</h1>
+  <p>My first paragraph.</p>
+  
+  <button type="button" onclick="document.write(5 + 6)">duc.. try it!</button>
+
 
  <!-- Your HTML content goes here -->
 
 <input type="submit" onclick="fun()">
 
-<script>
-  function fun() {
-    alert('Hi client, please login first on this page');
-  }
-</script>
+
   </script>
   <script>
    document.getElementById('demo').innerHTML = 2 + 6;
      document.write(4+2);
     window.alert(5 + 6);
-    
+
+
+    // function
+  function fun() {
+    alert('Hi client, please login first on this page');
+  }
 
     //1 Example of console.log()
     console.log(5 + 3);
@@ -44,7 +53,6 @@
     // 2 Examles of console.log()
     let message = "hellow world";
     console.log() ;
-
 
   </script>
 </body>
