modified JavaScript Statements 2

--- a/INTRO.html
+++ b/INTRO.html
@@ -20,10 +20,10 @@
   
   <p>In HTML, JavaScript statements are executed by the browser.</p>
   
-  <p id="demo"></p>
+  <p id="inner"></p>
   
   <script>
-    document.getElementById("demo").innerHTML = "Hello Dolly.";
+    document.getElementById("inner").innerHTML = "Hello Dolly.";
   </script>
 
 
