--- a/INTRO.html
+++ b/INTRO.html
@@ -14,7 +14,7 @@
   <p>A <b>JavaScript program</b> is a list of <b>statements</b> to be executed by a computer.</p>
 
 
-  <!--! statements innerHTML-->
+  <!--statements innerHTML-->
   <h2>JavaScript Statements</h2>
 
   <p>In HTML, JavaScript statements are executed by the browser.</p>
