--- a/INTRO.html
+++ b/INTRO.html
@@ -23,6 +23,7 @@
 <p id="demo1"></p>
 <p id="demo"></p>
 <p id="demo2"></p>
+<p id="line"></p>
 <script>
   let x, y, z, a, b, c, d, e, f;  // Remove unused variables d and e
   x = 5;        // Statement 
@@ -36,6 +37,12 @@
   document.getElementById("demo1").innerHTML = c;
   document.getElementById("demo").innerHTML = "The value Z is " + z + ".";
   document.getElementById("demo2").innerHTML = f;
+
+
+  // JavaScript line length and line breaks
+  document.getElementById("line").innerHTML =
+   "Hallow woald War of American"
+
 </script>
 
 </body>
