--- a/INTRO.html
+++ b/INTRO.html
@@ -19,31 +19,45 @@
 
   <p>In HTML, JavaScript statements are executed by the browser.</p>
 
-<p id="inner"></p>
-<p id="demo1"></p>
-<p id="demo"></p>
-<p id="demo2"></p>
-<p id="line"></p>
-<script>
-  let x, y, z, a, b, c, d, e, f;  // Remove unused variables d and e
-  x = 5;        // Statement 
-  y = 6;        // Statement 
-  a = 2;        // Statement 
-  b = 6;        // Statement (you may want to remove either this or the next line)
-  c = a + b;    // Statement 
-  z = x + y;    // Statement 
-  d = 3; e = 4; f = d + e;
-  document.getElementById("inner").innerHTML = "Hello Dolly.";
-  document.getElementById("demo1").innerHTML = c;
-  document.getElementById("demo").innerHTML = "The value Z is " + z + ".";
-  document.getElementById("demo2").innerHTML = f;
+  <p id="inner"></p>
+  <p id="demo1"></p>
+  <p id="demo"></p>
+  <p id="demo2"></p>
+  <p id="line"></p>
 
 
-  // JavaScript line length and line breaks
-  document.getElementById("line").innerHTML =
-   "Hallow woald War of American"
+  <!--for JavaScript Code Blocks-->
+  <button type="button" onclick="myFunction()">click me!</button>
+  <p id="curly1"></p>
+  <p id="curly2"></p>
 
-</script>
+  <script>
+    let x, y, z, a, b, c, d, e, f;  // Remove unused variables d and e
+    x = 5;        // Statement 
+    y = 6;        // Statement 
+    a = 2;        // Statement 
+    b = 6;        // Statement (you may want to remove either this or the next line)
+    c = a + b;    // Statement 
+    z = x + y;    // Statement 
+    d = 3; e = 4; f = d + e;
+    document.getElementById("inner").innerHTML = "Hello Dolly.";
+    document.getElementById("demo1").innerHTML = c;
+    document.getElementById("demo").innerHTML = "The value Z is " + z + ".";
+    document.getElementById("demo2").innerHTML = f;
+
+
+    // JavaScript line length and line breaks
+    document.getElementById("line").innerHTML =
+      "Hallow woald War of American"
+
+
+    // for JavaScript Code Blocks
+    function myFunction() {
+      document.getElementById("curly1").innerHTML = "Fas X!";
+      document.getElementById("curly2").innerHTML = "How are you?";
+    }
+
+  </script>
 
 </body>
 
