JavaScript Literals: numbers

--- a/Syntax.html
+++ b/Syntax.html
@@ -8,10 +8,16 @@
 </head>
 
 <body>
+<!--JavaScript Literals-->
+<h2>JavaScript Numbers</h2>
 
- <script>
-  
- </script>
+<p>Number can be written with or without decimals.</p>
+
+<p id="demo"></p>
+
+<script>
+document.getElementById("demo").innerHTML = 10.50;
+</script>
 
 </body>
 
