--- a/Syntax.html
+++ b/Syntax.html
@@ -8,16 +8,19 @@
 </head>
 
 <body>
-<!--JavaScript Literals-->
-<h2>JavaScript Numbers</h2>
+  <!--JavaScript Literals-->
+  <h2>JavaScript Numbers</h2>
 
-<p>Number can be written with or without decimals.</p>
+  <p>Number can be written with or without decimals.</p>
 
-<p id="demo"></p>
+  <p id="number"></p>
+  <p id="string"> </p>
 
-<script>
-document.getElementById("demo").innerHTML = 10.50;
-</script>
+  <script>
+    document.getElementById("number").innerHTML = 10.50;   ///  number
+
+    document.getElementById("string").innerHTML = 'John Doe';  //Strings 
+  </script>
 
 </body>
 
