--- a/Syntax.html
+++ b/Syntax.html
@@ -16,9 +16,21 @@
   <p id="number"></p>
   <p id="string"> </p>
 
-  <script>
-    document.getElementById("number").innerHTML = 10.50;   ///  number
 
+  <!--JavaScript Variables sart-->
+  <h2>JavaScript Variables</h2>
+  
+  <p>In this example, x is defined as a variable.
+    Then, x is assigned the value of 6:</p>
+  
+  <p id="mo"></p>
+<!--JavaScript Variables end-->
+
+  <script>
+    let x; //JavaScript Variables
+    x = 6;  //JavaScript Variables
+    document.getElementById("mo").innerHTML = x; 
+    document.getElementById("number").innerHTML = 10.50;   ///  number
     document.getElementById("string").innerHTML = 'John Doe';  //Strings 
   </script>
 
