something is deleted

--- a/Syntax.html
+++ b/Syntax.html
@@ -26,13 +26,14 @@
   <p id="mo"></p>
 <!--JavaScript Variables end-->
 
-  <script>
-    let x; //JavaScript Variables
-    x = 6;  //JavaScript Variables
-    document.getElementById("mo").innerHTML = x; 
-    document.getElementById("number").innerHTML = 10.50;   ///  number
-    document.getElementById("string").innerHTML = 'John Doe';  //Strings 
-  </script>
+
+<!--JavaScript Operators start-->
+<h2>JavaScript Operators</h2>
+<p>JavaScript uses arithmetic operators to compute values (just like algebra).</p>
+<p id="ops"></p>
+<!--JavaScript Operators start-->
+
+  <script src="./myScript.js"></script>
 
 </body>
 
