--- a/Syntax.html
+++ b/Syntax.html
@@ -26,7 +26,15 @@
   
   <p id="mo"></p>
   <p id="ops"></p>
+
+
+  <!--Assigning js operators-->
+  <h2>Assigning JavaScript Values</h2>
   
+  <p>In JavaScript the = operator is used to assign values to variables.</p>
+  
+  <p id="opr"></p>
+
 <!--JavaScript Variables end-->
 
   <script src="./myScript.js"></script>
