--- a/Syntax.html
+++ b/Syntax.html
@@ -20,22 +20,24 @@
 
   <!--JavaScript Variables sart-->
   <h2>JavaScript Variables</h2>
-  
+
   <p>In this example, x is defined as a variable.
     Then, x is assigned the value of 6:</p>
-  
+
   <p id="mo"></p>
   <p id="ops"></p>
+  <p id="opr"></p> <!--assigning JS operators-->
 
-
+  <button id="xp" onclick="window.alert(50)">Value</button>
   <!--Assigning js operators-->
   <h2>Assigning JavaScript Values</h2>
-  
   <p>In JavaScript the = operator is used to assign values to variables.</p>
-  
-  <p id="opr"></p>
+  <!--JavaScript Variables end-->
 
-<!--JavaScript Variables end-->
+  <!--JavaScript Expressions-->
+  <h2>JavaScript Expressions</h2>
+  <p>Expressions compute to values.</p>
+  <p id="st"></p>
 
   <script src="./myScript.js"></script>
 
