--- a/Syntax.html
+++ b/Syntax.html
@@ -39,7 +39,25 @@
   <p>Expressions compute to values.</p>
   <p id="st"></p>
 
+  <!--js keywords-->
+  <h2>The <b>let</b> Keyword Creates Variables</h2>
+  <p id="key"></p>
+
+
+  <h2>The <b>let</b> Keyword Creates Variables</h2>
+  
+  <p id="key"></p>
+  
+  
+  <script>
+    let x, y;
+    x = 5 + 6;
+    y = x * 10;
+    document.getElementById("g").innerHTML = y;
+  </script>
+
   <script src="./myScript.js"></script>
+
 
 </body>
 
