--- a/variables.html
+++ b/variables.html
@@ -25,6 +25,15 @@
   </script>
  
 
+ h1>JavaScript Variables</h1>
+
+<p>A variable without a value has the value of:</p>
+<p id="demo"></p>
+
+<script>
+  let carName;
+  document.getElementById("demo").innerHTML = carName;
+</script>
 </body>
 
 </html>
